@@ -4,29 +4,35 @@ improve
 	- improve newRecipe js handling
 		- better ingredients storage (array, json)
 	- validation in form (html/js)
+	- Class.json (less editing)
 	+-0 feedback form - select issue
-	-
- 
+
 bugfix
 	- no flash on login
 	+- newRecipe overlapping cols
 
 v2.2
+	-5 skript na suroviny (xlsx -> db)
 	-2 přepočítání receptů na jinou dietu
 		+- přepočítat všechny (ale bez záruky)
 		- nahrát jeden do newRecipe
 			+- ukázat v recipe__ dietu
 		- loader
 	-2 tisk receptu (ze stránky receptu)
+	- newRecipe nová surovina - začít psát název suroviny
+	- 
+	+- surovina energie
 	+- recalc loader
 	+- úprava suroviny
 	+	- název
-	+	- množství (pokud není použitý)
-	+- úprava diety
-	+	- název
-	+	- množství (pokud nemá recept)
-	+- úprava receptu
-	+	- název
+		+- množství (pokud není použitý)
+	- úprava diety
+		+- název
+		+- množství (pokud nemá recept)
+		- velikosti jídel
+	- úprava receptu
+		+- název
+		- velikost jídla
 	+- feedback form
 		+- basic
 		+- w/ file upload
@@ -57,7 +63,9 @@ Someday
 	- Calculator 4 speed
 	- testování
 	- deaktivace diety
-	-0 surovina energie
+
+	- řazení all listů podle abecedy/id/?
+		- rychlé vyhledávání
 
 
 _________________________________________________________________________________________________
