@@ -15,6 +15,7 @@
             <table id="ingredients" class="table">
                 <tr>
                     <th>Název</th>
+                    <th>Kalorie</th>
                     <th>Bílkovina</th>
                     <th>Tuk</th>
                     <th>Sacharidy</th>
@@ -22,6 +23,7 @@
                 {% for ingredient in ingredients: %}
                     <tr>
                         <td><a href="/ingredient={{ingredient.id}}">{{ ingredient.name }}</a></td>
+                        <td>{{ ingredient.calorie }}</td>
                         <td>{{ ingredient.protein }}</td>
                         <td>{{ ingredient.fat }}</td>
                         <td>{{ ingredient.sugar }}</td>
