@@ -1,6 +1,6 @@
 {% with messages = get_flashed_messages() %}
   {% if messages %}
-  <div class="flashes">
+  <div class="flashes container">
     <ul>
     {% for message in messages %}
       <li>{{ message }}</li>
