@@ -43,10 +43,10 @@
             <a class="nav-link" href="/logout">Odhlásit se</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link small" href="/changelog">Changelog</a>
+            <a class="nav-link small" href="/changelog">Změny</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link small" href="/feedback">Feedback</a>
+            <a class="nav-link small" href="/feedback">Připomínky</a>
           </li>
         </ul>
 
