@@ -54,6 +54,7 @@
 					<ul>
 						<li>úprava suroviny, receptu, diety</li>
 						<li>feedback formulář</li>
+						<li>přidání kalorií k surovinám</li>
 					</ul>
 				</li>
 				<i>
